# rest_fetcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cheatsheet.md  contributor_contract_map.md  render_cheatsheet.py  schema_guide.md  semantics.md
examples/: anthropic_example.py  atom_example.py  booze_example.py  events_rate_limit_example.py  examples.py  glpi_example.py  nager_example.py  whoisjson_example.py
examples/case_studies/: pcal_example.py
examples/fixtures/: README.txt  atom_directory_example.json  example_02_list_events.json  example_05_custom_pagination_state.json  example_18_offset_users.json  example_18_page_number_posts.json  example_19_link_header_repos.json  example_26_playback_users.json  example_35_text_status.json  example_36_xml_feed.json  example_37_csv_report.json  example_38_nested_pagination.json  example_39_callback_debugging.json  example_40_json_as_bytes.json
rest_fetcher/: __init__.py  _fetch_job.py  _job_config.py  _run_state.py  auth.py  callbacks.py  client.py  context.py  events.py  exceptions.py  metrics.py  pagination.py  parsing.py  playback.py  rate_limit.py  retry.py  schema.py  strategies.py  types.py
tests/: test_core.py  test_events_rate_limit.py  test_examples_replay.py  test_parsing_pagination.py  test_playback.py
